# Devtool

./: .dockerignore  Dockerfile  README.md  RESULTS.md  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  publish.yml
clients/js/: README.md  package-lock.json  package.json
clients/js/src/: index.ts
docs/: DEPLOY.md
examples/: benign.txt  labeled_samples.jsonl  mcp_mock.py  poisoned.txt
src/agentguard/: __init__.py  cli.py  guard.py  mcp_proxy.py  model.py  policy.py
src/agentguard/detectors/: __init__.py  heuristic.py  llm_judge.py  probe.py
src/agentguard/integrations/: decorator.py  langchain.py  llamaindex.py
src/agentguard/server/: app.py  auth.py
tests/: test_agentguard.py  test_server_auth.py
